apps/argocd/base/argocd-redis-ha-proxy-service-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-redis-ha-proxy-service-monitor
spec:
  ingress:
  - ports:
    - port: 9101
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis-ha-haproxy
  policyTypes:
  - Ingress
